# arq-teleop-robot

./: .gitignore  BLE_Glove.ino  Data Glove - BLE Server Side  README.md  listener.cpp  rawdatahandler.cpp  rift-ros-win32client.unitypackage  stiffness_glove.ino  stiffness_node.py
Examples/Unity/ROS-Comms/: ROS-Comms.Editor.csproj  ROS-Comms.csproj  ROS-Comms.sln
Examples/Unity/ROS-Comms/ProjectSettings/: InputManager.asset  ProjectSettings.asset
Kinect_Interface/: CMakeLists.txt
Kinect_Interface/include/: interface.h  ros_headers.h
Kinect_Interface/src/: interface.cpp
Unity/Materials/: Ceiling.mat  Floor.mat  Screen.mat
Unity/RosSharp/Scripts/MessageHandling/: GazeInputOVR.cs  JoyOVRReader.cs  JoyProvider.cs  OVRProvider.cs  StandardFloat.cs  StandardFloatReceiver.cs
Unity/Scripts/: ScreenController.cs  ScreenPositionController.cs  dum.cs
Unity/URDF/PanTilt/Materials/: blue.mat
Unity/_Scenes/: direct.unity  hybrid_far.unity  hybrid_near.unity
cam_ws/src/: classify.sh  classify_gazebo_image.py
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/lib/pkgconfig/: kinect_description.pc  kinect_gazebo.pc  pan_tilt_cam.pc  pan_tilt_description.pc  pan_tilt_gazebo.pc
catkin_ws/install/: _setup_util.py
catkin_ws/src/: README.md
catkin_ws/src/kinect2_bridge/: README.md
catkin_ws/src/kinect2_bridge/launch/: kinect2_bridge.launch
catkin_ws/src/kinect2_bridge/src/: kinect2_bridge.cpp
catkin_ws/src/kinect2_calibration/src/: kinect2_calibration.cpp
catkin_ws/src/kinect2_registration/: CMakeLists.txt
catkin_ws/src/kinect2_registration/src/: kinect2_registration.cpp
catkin_ws/src/kinect2_viewer/src/: viewer.cpp
catkin_ws/src/kinect_description/: package.xml
catkin_ws/src/kinect_description/launch/: kinect_rviz.launch
catkin_ws/src/kinect_description/urdf/: kinect.gazebo  kinect.urdf  kinect.urdf.xacro  materials.xacro  update_urdf.sh
catkin_ws/src/kinect_gazebo/: CMakeLists.txt
catkin_ws/src/kinect_gazebo/launch/: kinect_gazebo.launch
catkin_ws/src/kinect_interface/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/kinect_interface/src/: kinect_interface.cpp
catkin_ws/src/object_detection/: CMakeLists.txt  package.xml
catkin_ws/src/object_detection/src/: object_detection.cpp
catkin_ws/src/object_locator/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/object_locator/src/: object_locator.cpp
catkin_ws/src/object_recognition/: CMakeLists.txt  package.xml
catkin_ws/src/object_recognition/src/: object_recognition  object_recognition.cpp  run_obj_recog.sh
catkin_ws/src/pan_tilt_cam/: CMakeLists.txt  package.xml
catkin_ws/src/pan_tilt_cam/launch/: display.launch
catkin_ws/src/pan_tilt_control/: CMakeLists.txt  package.xml
catkin_ws/src/pan_tilt_control/config/: pan_tilt_control.yaml
catkin_ws/src/pan_tilt_control/launch/: pan_tilt_control.launch
catkin_ws/src/pan_tilt_description/: CMakeLists.txt
catkin_ws/src/pan_tilt_description/launch/: pan_tilt_rviz.launch
catkin_ws/src/pan_tilt_description/urdf/: .pan_tilt.urdf.swp  box.urdf  materials.xacro  pan_tilt.gazebo  pan_tilt.urdf  pan_tilt.urdf.xacro  update_urdf.sh
catkin_ws/src/pan_tilt_gazebo/: CMakeLists.txt  package.xml  pan_tilt_new.urdf
catkin_ws/src/pan_tilt_gazebo/launch/: .pan_tilt_xacro.launch.swp  pan_tilt.launch  pan_tilt_rviz.launch  pan_tilt_xacro.launch
catkin_ws/src/pan_tilt_gazebo/src/: drive_turtlebot.cpp  hello_world_plugin.cc  joint_neck_publisher.cpp  key_publisher.py  keys_to_twist.py  model_push.cc  red_light_green_light.py
catkin_ws/src/pan_tilt_gazebo/worlds/: .petrol_station.world.swp  petrol_station.world  sphere_atlas_demo.world
catkin_ws/src/pan_tilt_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/pan_tilt_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pan_tilt.srdf
catkin_ws/src/pan_tilt_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_wsu/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_wsu/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_wsu/devel/.private/ur_position_publisher/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_wsu/devel/.private/ur_positioner/: .catkin  .rosinstall  setup.sh
catkin_wsu/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  ur_position_publisher.pc  ur_positioner.pc
catkin_wsu/devel/lib/ur_position_publisher/: ur_position_publisher_node
catkin_wsu/devel/lib/ur_positioner/: ur_positioner_node
catkin_wsu/logs/ur_position_publisher/: build.cmake.000.log.stderr
catkin_wsu/src/: ur_keyboard_controller.py
catkin_wsu/src/ur_position_publisher/: CMakeLists.txt  package.xml
catkin_wsu/src/ur_position_publisher/src/: ur_position_publisher_node.cpp
catkin_wsu/src/ur_positioner/: CMakeLists.txt  package.xml
catkin_wsu/src/ur_positioner_kinetic/: CMakeLists.txt  package.xml
catkin_wsu/src/ur_positioner_kinetic/include/ur_positioner_kinetic/: UrPositionerKinetic.hpp
catkin_wsu/src/ur_positioner_kinetic/launch/: ur_positioner_kinetic.launch
catkin_wsu/src/ur_positioner_kinetic/src/: UrPositionerKinetic.cpp  ur_positioner_kinetic_node.cpp
catkin_wsu/src/ur_world_objects/: CMakeLists.txt  package.xml
devel/: setup.sh
devel/lib/pkgconfig/: kinect_description.pc  kinect_gazebo.pc
src/kinect_description/: CMakeLists.txt
src/kinect_description/rviz/: urdf.rviz
src/kinect_description/urdf/: kineck.urdf  kinect.urdf.xacro
ur_position_publisher/: CMakeLists.txt
ur_position_publisher/launch/: ur_position_publisher.launch
ur_positioner/: CMakeLists.txt
ur_positioner/launch/: ur_positioner.launch
ur_positioner/src/: ur_positioner_node.cpp
(+102 files in other folders)
